refactor: apply clean code standards across security, controllers, and dtos
Refactor security filters, controllers, and DTOs to follow Clean Code principles, including guard clauses, SLF4J error logging, and constant extraction. Standardized Javadocs and comments in Portuguese while preserving 100% backward compatibility and functional parity.